--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,10 +66,20 @@
         style="@style/FormItem"
         />
     <com.devpm.vocabuilder.views.TextEditView
-        android:id="@+id/emailView"
+        android:id="@+id/birthdateView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/lastNameView"
+        app:label="@string/birthdate_label"
+        app:hint="@string/birthdate_hint"
+        app:type="@integer/type_date"
+        style="@style/FormItem"
+        />
+    <com.devpm.vocabuilder.views.TextEditView
+        android:id="@+id/emailView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/birthdateView"
         app:label="@string/email_label"
         app:hint="@string/email_hint"
         app:type="@integer/type_email"
@@ -83,16 +93,6 @@
         app:label="@string/phone_label"
         app:hint="@string/phone_hint"
         app:type="@integer/type_phone"
-        style="@style/FormItem"
-        />
-    <com.devpm.vocabuilder.views.TextEditView
-        android:id="@+id/birthdateView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/phoneView"
-        app:label="@string/birthdate_label"
-        app:hint="@string/birthdate_hint"
-        app:type="@integer/type_date"
         style="@style/FormItem"
         />
 
