--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,14 @@
     <color name="blue">#16709C</color>
     <color name="blueBright">#21A0DF</color>
     <color name="cyanDark">#009ca2</color>
+    <color name="error">#FF0000</color>
+    <color name="errorT">#DEFF0000</color>
     <color name="gray">#AAdfFFec</color>
     <color name="greenBright">#50B319</color>
     <color name="label">#105070</color>
+    <color name="success">#50B319</color>
+    <color name="successT">#DE50B319</color>
+    <color name="warning">#F57F17</color>
+    <color name="warningT">#DEF57F17</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
