--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,30 +8,42 @@
         <item name="fontWeight">600</item>
     </style>
     <style name="BaseLabel">
-        <item name="android:textColor">@color/blue</item>
+        <item name="android:textColor">@color/cyanDark</item>
         <item name="android:textSize">20sp</item>
-        <item name="fontFamily">sans-serif-condensed</item>
-        <item name="fontWeight">600</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
     </style>
-    <style name="FormLabel" parent="BaseLabel">
-        <item name="android:layout_marginTop">20dp</item>
-        <item name="android:paddingRight">10dp</item>
+    <style name="BaseLabel.FormLabel">
+        <item name="android:paddingRight">5dp</item>
     </style>
     <style name="BaseBox">
         <item name="android:ellipsize">end</item>
-        <item name="android:maxHeight">50dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:padding">5dp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">normal</item>
         <item name="fontFamily">sans-serif-condensed</item>
     </style>
-    <style name="FormBox" parent="BaseBox">
-        <item name="android:layout_marginEnd">5dp</item>
-        <item name="android:layout_marginTop">5dp</item>
+    <style name="BaseBox.FormBox">
+        <item name="android:fontFamily">sans-serif-condensed</item>
+        <item name="android:typeface">sans</item>
+    </style>
+    <style name="BaseButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+    <style name="BaseButton.FormButton">
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+    <style name="FormItem">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginTop">20dp</item>
     </style>
     <style name="Layout">
-        <item name="android:background">@color/baseLight</item>
+        <item name="android:background">@color/baseBackground</item>
         <item name="android:padding">20dp</item>
     </style>
 </resources>
