docs: implement reset feature

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -97,6 +97,7 @@
         />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/resetBtn"
         android:background="@drawable/button_bg"
         android:backgroundTint="@color/blueBright"
         android:layout_width="match_parent"
