--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="TextEditView">
         <attr name="hint" format="string" />
         <attr name="label" format="string" />
+        <attr name="nullable" format="boolean" />
         <attr name="value" format="string" />
         <attr name="type" format="integer" />
     </declare-styleable>
