--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,6 +54,7 @@
         app:layout_constraintTop_toBottomOf="@id/passRepeatView"
         app:label="@string/first_name_label"
         app:hint="@string/name_hint"
+        app:nullable="true"
         style="@style/FormItem"
         />
     <com.devpm.vocabuilder.views.TextEditView
@@ -63,6 +64,7 @@
         app:layout_constraintTop_toBottomOf="@id/firstNameView"
         app:label="@string/last_name_label"
         app:hint="@string/name_hint"
+        app:nullable="true"
         style="@style/FormItem"
         />
     <com.devpm.vocabuilder.views.TextEditView
@@ -72,6 +74,7 @@
         app:layout_constraintTop_toBottomOf="@id/lastNameView"
         app:label="@string/birthdate_label"
         app:hint="@string/birthdate_hint"
+        app:nullable="true"
         app:type="@integer/type_date"
         style="@style/FormItem"
         />
@@ -82,6 +85,7 @@
         app:layout_constraintTop_toBottomOf="@id/birthdateView"
         app:label="@string/email_label"
         app:hint="@string/email_hint"
+        app:nullable="true"
         app:type="@integer/type_email"
         style="@style/FormItem"
         />
@@ -92,6 +96,7 @@
         app:layout_constraintTop_toBottomOf="@id/emailView"
         app:label="@string/phone_label"
         app:hint="@string/phone_hint"
+        app:nullable="true"
         app:type="@integer/type_phone"
         style="@style/FormItem"
         />
