refactor: extract string resources

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,7 +12,7 @@
         android:id="@+id/titleHeader"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Authenticate"
+        android:text="@string/login_header_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,36 +24,36 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
-        android:text="Login"
+        android:text="@string/login_label"
         android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@id/titleHeader"
         style="@style/BaseLabel"
         />
     <EditText
         android:id="@+id/loginBox"
-        android:hint="Your username"
+        android:hint="@string/login_box_hint"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:layout_constraintTop_toBottomOf="@id/loginLabel"
-        style="@style/BaseBox.FormBox"
+        style="@style/BaseBox"
         />
     <TextView
         android:id="@+id/passwordLabel"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
-        android:text="Password"
+        android:text="@string/password_label"
         android:textFontWeight="500"
         app:layout_constraintTop_toBottomOf="@id/loginBox"
         style="@style/BaseLabel"
         />
     <EditText
         android:id="@+id/passwordBox"
-        android:hint="Your password"
+        android:hint="@string/password_box_hint"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         app:layout_constraintTop_toBottomOf="@id/passwordLabel"
-        style="@style/BaseBox.FormBox"
+        style="@style/BaseBox"
         />
 
     <CheckBox
@@ -69,7 +69,7 @@
         android:id="@+id/rememberMeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Remember me"
+        android:text="@string/remember_label"
         android:textFontWeight="500"
         app:layout_constraintStart_toEndOf="@id/keepLoggedInBox"
         app:layout_constraintBaseline_toBaselineOf="@id/keepLoggedInBox"
@@ -79,7 +79,7 @@
         android:id="@+id/keepLoggedInLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="(keep logged in)"
+        android:text="@string/keep_logged_text"
         android:textColor="@color/hint"
         android:paddingStart="10dp"
         app:layout_constraintStart_toEndOf="@id/rememberMeLabel"
@@ -93,7 +93,7 @@
         android:backgroundTint="@color/greenBright"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sign In"
+        android:text="@string/login_button_text"
         app:layout_constraintTop_toBottomOf="@id/keepLoggedInBox"
         style="@style/BaseButton.FormButton"
         />
@@ -102,7 +102,7 @@
         android:id="@+id/noAccountLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Don't have an account yet?"
+        android:text="@string/no_account_text"
         android:textColor="@color/hint"
         android:layout_marginTop="30dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +113,7 @@
         android:id="@+id/registerLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register here"
+        android:text="@string/register_link"
         android:textColor="@color/hyperlink"
         android:layout_marginTop="30dp"
         android:layout_marginStart="10dp"
