--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     style="@style/Layout"
     >
     <TextView
-        android:id="@+id/titleHeader"
+        android:id="@+id/titleHdr"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:text="@string/login_header_text"
@@ -20,13 +20,13 @@
         />
 
     <TextView
-        android:id="@+id/loginLabel"
+        android:id="@+id/loginLbl"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
         android:text="@string/login_label"
         android:textFontWeight="500"
-        app:layout_constraintTop_toBottomOf="@id/titleHeader"
+        app:layout_constraintTop_toBottomOf="@id/titleHdr"
         style="@style/BaseLabel"
         />
     <EditText
@@ -34,11 +34,11 @@
         android:hint="@string/login_box_hint"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/loginLabel"
+        app:layout_constraintTop_toBottomOf="@id/loginLbl"
         style="@style/BaseBox"
         />
     <TextView
-        android:id="@+id/passwordLabel"
+        android:id="@+id/passwordLbl"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="20dp"
@@ -52,7 +52,7 @@
         android:hint="@string/password_box_hint"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
+        app:layout_constraintTop_toBottomOf="@id/passwordLbl"
         style="@style/BaseBox"
         />
 
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@id/passwordBox"
         />
     <TextView
-        android:id="@+id/rememberMeLabel"
+        android:id="@+id/rememberMeLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/remember_label"
@@ -82,7 +82,7 @@
         android:text="@string/keep_logged_text"
         android:textColor="@color/hint"
         android:paddingStart="10dp"
-        app:layout_constraintStart_toEndOf="@id/rememberMeLabel"
+        app:layout_constraintStart_toEndOf="@id/rememberMeLbl"
         app:layout_constraintBaseline_toBaselineOf="@id/keepLoggedInBox"
         style="@style/BaseLabel"
         />
@@ -99,7 +99,7 @@
         />
 
     <TextView
-        android:id="@+id/noAccountLabel"
+        android:id="@+id/noAccountLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_account_text"
@@ -118,8 +118,8 @@
         android:layout_marginTop="30dp"
         android:layout_marginStart="10dp"
         android:textFontWeight="600"
-        app:layout_constraintStart_toEndOf="@id/noAccountLabel"
-        app:layout_constraintBaseline_toBaselineOf="@id/noAccountLabel"
+        app:layout_constraintStart_toEndOf="@id/noAccountLbl"
+        app:layout_constraintBaseline_toBaselineOf="@id/noAccountLbl"
         style="@style/BaseLabel"
         />
 
