--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="64.7"
+    android:viewportHeight="65.35">
+  <group android:scaleX="0.54452944"
+      android:scaleY="0.55"
+      android:translateX="14.734472"
+      android:translateY="14.70375">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M25.2,64.44c-6.25,-1.35 -10.9,-3.9 -15.8,-8.75 -4.2,-4.2 -6.25,-7.35 -8.25,-12.75 -1,-2.85 -1.15,-4.15 -1.15,-10.25s0.15,-7.45 1.15,-10.25c1.9,-5.3 4,-8.5 8.25,-12.75C20,-0.86 34.15,-2.91 47.95,4.09c3.3,1.65 7.3,5.15 6.25,5.5 -4.2,1.4 -3.9,1.4 -6.65,-0.4 -4.5,-3 -9.3,-4.35 -15.35,-4.35 -5.9,-0.05 -9.45,0.9 -14.5,3.9 -7.75,4.55 -12.9,13 -13.35,21.95 -0.3,5.7 0.35,9.2 2.65,14.1 2.1,4.45 7.25,10.05 11.4,12.3 11.05,6.1 24.7,4.25 33.55,-4.55 6.9,-6.85 9.55,-16.05 7.5,-26.2 -0.9,-4.6 -0.6,-7.1 1,-8.4 0.6,-0.5 0.9,-0.2 1.8,1.8 1.65,3.85 2.45,8.1 2.45,12.95 0,9.35 -2.8,16.05 -9.45,22.75 -5.3,5.3 -9.55,7.65 -16.2,9.05 -5.65,1.15 -8.35,1.15 -13.85,-0.05Z"
+        android:fillColor="#e72566"/>
+    <path
+        android:pathData="M30.7,55.34c-0.7,-0.3 -3.85,-1.7 -7,-3.05 -9.35,-4 -10.5,-4.55 -10.5,-4.95 0,-0.2 5.4,-3.95 12.05,-8.3l12,-8 3.35,1.5c1.85,0.85 4.25,1.9 5.35,2.35 8.55,3.7 10.75,4.75 10.75,5.15 0,0.2 -0.2,0.4 -0.45,0.4 -0.2,0 -5.6,3.5 -12,7.75 -6.35,4.25 -11.75,7.75 -11.95,7.7 -0.2,0 -0.9,-0.25 -1.6,-0.55Z"
+        android:fillColor="#e72566"/>
+    <path
+        android:pathData="M11.25,34.54l-0.1,-11 11.8,-7.9c6.45,-4.3 11.9,-7.75 12.05,-7.6 0.1,0.15 0.35,2.95 0.5,6.2 0.1,3.3 0.3,8 0.45,10.5 0.2,3.9 0.1,4.7 -0.65,5.3 -1.65,1.45 -22.25,15.05 -23.1,15.25s-0.9,-0.5 -0.95,-10.75ZM33.95,20.19c-0.2,-4.65 -0.45,-8.65 -0.6,-8.85 -0.1,-0.2 -4.8,2.7 -10.4,6.45l-10.25,6.8 0.3,7.8c0.15,4.3 0.35,8.3 0.5,8.95 0.2,1 1,0.6 10.5,-5.75l10.3,-6.9s-0.35,-8.5 -0.35,-8.5Z"
+        android:fillColor="#e72566"/>
+    <path
+        android:pathData="M15.95,31.19c-0.55,-3.4 -0.05,-4.3 3.3,-6.4 1.7,-1.05 3.15,-1.8 3.3,-1.7 0.1,0.1 0.3,1.35 0.5,2.8 0.15,1.4 0.4,2.55 0.55,2.55s1.05,-0.5 1.95,-1.1c1.4,-1 1.65,-1.45 1.65,-3.15 0,-1.8 0.2,-2.1 2,-3.15l2,-1.15v2.05c0,1.1 -0.2,2 -0.45,2s-1.15,0.6 -2,1.3c-1.2,1 -1.55,1.7 -1.55,3.1 0,1.55 -0.3,2.05 -1.75,3 -2.2,1.4 -2.25,1.4 -2.25,-0.4 0,-1.9 -0.45,-1.9 -3.4,0.15 -1.3,0.9 -2.6,1.8 -2.95,2 -0.4,0.25 -0.7,-0.35 -0.9,-1.9Z"
+        android:fillColor="#e72566"/>
+    <path
+        android:pathData="M53,27.39c-0.15,-0.4 -0.75,-2.05 -1.3,-3.7 -0.6,-1.65 -1.2,-3.35 -1.3,-3.75 -0.15,-0.4 -1.95,-1.7 -4,-2.9 -2.1,-1.2 -3.7,-2.25 -3.6,-2.35s1.5,-0.5 3.15,-0.9c1.65,-0.45 5.25,-1.35 8,-2.1 8.85,-2.35 8.35,-2.3 8,-1.2 -0.85,2.6 -8.75,17.55 -8.95,16.9Z"
+        android:fillColor="#e72566"/>
+  </group>
 </vector>
