chore: add extra color resources

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,14 +5,26 @@
     <color name="black">#FF000000</color>
     <color name="blue">#16709C</color>
     <color name="blueBright">#21A0DF</color>
+    <color name="brownDark">#5C4033</color>
+    <color name="cyan">#46b8bc</color>
     <color name="cyanDark">#009ca2</color>
+    <color name="cyanDarker">#198589</color>
+    <color name="cyanLight">#8bd3d5</color>
     <color name="error">#FF0000</color>
     <color name="errorT">#DEFF0000</color>
     <color name="gray">#AAdfFFec</color>
+    <color name="grayBase">#143447</color>
     <color name="greenBright">#50B319</color>
     <color name="hint">#808080</color>
     <color name="hyperlink">#337ab7</color>
     <color name="label">#105070</color>
+    <color name="magentaBase">#ff0763</color>
+    <color name="magenta">#ef91bc</color>
+    <color name="magentaDark">#e53582</color>
+    <color name="magentaLight">#f3c2d9</color>
+    <color name="orangeDark">#f38c2b</color>
+    <color name="orangeLight">#f3b26c</color>
+    <color name="orange">#df7020</color>
     <color name="success">#50B319</color>
     <color name="successT">#DE50B319</color>
     <color name="warning">#F57F17</color>
