--- a/app/src/main/res/layout/view_text_edit.xml
+++ b/app/src/main/res/layout/view_text_edit.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:baselineAligned="true"
     >
+
     <TextView
         android:id="@+id/label"
         android:layout_height="wrap_content"
@@ -15,14 +17,32 @@
         android:layout_weight="1"
         style="@style/BaseLabel.FormLabel"
         />
-    <EditText
-        android:id="@+id/textBox"
-        android:hint="hint"
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2.5"
-        android:paddingVertical="7dp"
-        android:text="value"
-        style="@style/BaseBox"
-        />
+        >
+        <EditText
+            android:id="@+id/textBox"
+            android:hint="hint"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingVertical="7dp"
+            android:text="value"
+            style="@style/BaseBox"
+            />
+        <ImageView
+            android:id="@+id/pwdVisToggle"
+            android:layout_width="30dp"
+            android:layout_height="25dp"
+            android:layout_gravity="end|top"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@string/toggle_pwd_desc"
+            android:src="@drawable/ic_eye_solid"
+            android:visibility="gone"
+            app:tint="@color/blue"
+            />
+    </LinearLayout>
+
 </LinearLayout>
