--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,8 +56,20 @@
         android:inputType="textPassword"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:paddingEnd="30dp"
         app:layout_constraintTop_toBottomOf="@id/passwordLbl"
         style="@style/BaseBox"
+        />
+    <ImageView
+        android:id="@+id/pwdVisToggle"
+        android:layout_width="30dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="13dp"
+        android:contentDescription="@string/toggle_pwd_desc"
+        android:src="@drawable/ic_eye_solid"
+        app:tint="@color/blue"
+        app:layout_constraintTop_toBottomOf="@id/passwordLbl"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <CheckBox
