--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -170,7 +170,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_list"
+                android:src="@drawable/ic_deck"
                 android:contentDescription="@string/menu_decks_label"
                 app:tint="@color/cyanDarker"
                 />
