chore: set ids for controls

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,7 @@
             >
 
             <ImageView
+                android:id="@+id/profileImg"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_user"
@@ -86,6 +87,7 @@
                 app:tint="@color/magentaDark" />
 
             <TextView
+                android:id="@+id/profileLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_profile_label"
@@ -108,6 +110,7 @@
             >
 
             <ImageView
+                android:id="@+id/settingsImg"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_gear"
@@ -116,6 +119,7 @@
                 />
 
             <TextView
+                android:id="@+id/settingsLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_settings_label"
@@ -138,6 +142,7 @@
             >
 
             <ImageView
+                android:id="@+id/statsImg"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_chart"
@@ -146,6 +151,7 @@
                 />
 
             <TextView
+                android:id="@+id/statsLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_stats_label"
@@ -168,6 +174,7 @@
             >
 
             <ImageView
+                android:id="@+id/decksImg"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_deck"
@@ -176,6 +183,7 @@
                 />
 
             <TextView
+                android:id="@+id/decksLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/menu_decks_label"
