fix: add top margin and content description

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:id="@+id/topBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -42,6 +43,7 @@
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:contentDescription="@string/logout_text"
             android:src="@drawable/ic_logout"
             app:tint="@color/hyperlink"
             />
