--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,14 +18,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
+        <ImageView
+            android:contentDescription="@string/app_name"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="2dp"
+            android:src="@drawable/ic_logo"
+            app:tint="@color/magentaBase"
+            />
         <TextView
             android:id="@+id/userNameTxt"
             android:layout_gravity="start"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="userLogin"
-            android:textStyle="bold"
             android:textSize="15sp"
+            android:textStyle="bold"
             android:textColor="@color/cyanDarker"
             />
         <TextView
@@ -36,12 +45,14 @@
             android:layout_weight="1"
             android:paddingStart="10dp"
             android:text="user@email.com"
+            android:textColor="@color/hint"
             android:textSize="15sp"
             />
         <ImageView
+            android:contentDescription="@string/logout_text"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:contentDescription="@string/logout_text"
+            android:layout_marginTop="-2dp"
             android:src="@drawable/ic_logout"
             app:tint="@color/hyperlink"
             />
@@ -52,6 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:paddingTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/topBar"
         app:layout_constraintBottom_toTopOf="@id/navBar"
         />
