--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -32,6 +32,9 @@
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:layout_marginTop">10dp</item>
     </style>
+    <style name="BaseValue">
+        <item name="android:textSize">20sp</item>
+    </style>
     <style name="FormItem">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">match_parent</item>
