--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -13,5 +13,68 @@
         app:hint="@string/login_hint"
         style="@style/FormItem"
         />
+    <com.devpm.vocabuilder.views.TextEditableView
+        android:id="@+id/passwordView"
+        app:label="@string/password_label"
+        app:hint="@string/password_hint"
+        app:toggleable="true"
+        app:type="@integer/type_password"
+        style="@style/FormItem"
+        />
+    <com.devpm.vocabuilder.views.TextEditableView
+        android:id="@+id/passRepeatView"
+        app:label="@string/pass_repeat_label"
+        app:hint="@string/pass_repeat_hint"
+        app:toggleable="true"
+        app:type="@integer/type_password"
+        style="@style/FormItem"
+        />
+    <com.devpm.vocabuilder.views.TextEditableView
+        android:id="@+id/firstNameView"
+        app:label="@string/first_name_label"
+        app:hint="@string/name_hint"
+        app:nullable="true"
+        style="@style/FormItem"
+        />
+    <com.devpm.vocabuilder.views.TextEditableView
+        android:id="@+id/lastNameView"
+        app:label="@string/last_name_label"
+        app:hint="@string/name_hint"
+        app:nullable="true"
+        style="@style/FormItem"
+        />
+    <com.devpm.vocabuilder.views.TextEditableView
+        android:id="@+id/birthdateView"
+        app:label="@string/birthdate_label"
+        app:hint="@string/birthdate_hint"
+        app:nullable="true"
+        app:type="@integer/type_date"
+        style="@style/FormItem"
+        />
+    <com.devpm.vocabuilder.views.TextEditableView
+        android:id="@+id/emailView"
+        app:label="@string/email_label"
+        app:hint="@string/email_hint"
+        app:nullable="true"
+        app:type="@integer/type_email"
+        style="@style/FormItem"
+        />
+    <com.devpm.vocabuilder.views.TextEditableView
+        android:id="@+id/phoneView"
+        app:label="@string/phone_label"
+        app:hint="@string/phone_hint"
+        app:nullable="true"
+        app:type="@integer/type_phone"
+        style="@style/FormItem"
+        />
+    <com.devpm.vocabuilder.views.TextEditableView
+        android:id="@+id/createdView"
+        app:label="Register date"
+        app:value="20.08.2025"
+        app:nullable="true"
+        app:readonly="true"
+        app:type="@integer/type_phone"
+        style="@style/FormItem"
+        />
 
 </LinearLayout>
