--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -69,7 +69,7 @@
         />
     <com.devpm.vocabuilder.views.TextEditableView
         android:id="@+id/createdView"
-        app:label="Register date"
+        app:label="@string/registered_label"
         app:value="20.08.2025"
         app:nullable="true"
         app:readonly="true"
