--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -67,14 +67,33 @@
         app:type="@integer/type_phone"
         style="@style/FormItem"
         />
-    <com.devpm.vocabuilder.views.TextEditableView
-        android:id="@+id/createdView"
-        app:label="@string/registered_label"
-        app:value="20.08.2025"
-        app:nullable="true"
-        app:readonly="true"
-        app:type="@integer/type_phone"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         style="@style/FormItem"
-        />
+        >
+        <TextView
+            android:id="@+id/label"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:paddingVertical="5dp"
+            android:layout_marginTop="2dp"
+            android:text="@string/registered_label"
+            android:textFontWeight="500"
+            style="@style/BaseLabel.FormLabel"
+            />
+        <TextView
+            android:id="@+id/textVal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:gravity="end"
+            android:text="20.08.2025"
+            android:paddingVertical="7dp"
+            android:paddingEnd="10dp"
+            android:textSize="20sp"
+            android:fontFamily="sans-serif-condensed"
+            />
+    </LinearLayout>
 
 </LinearLayout>
