--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,9 +6,14 @@
     tools:context=".fragments.SettingsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Settings fragment" />
+    <ImageView
+        android:id="@+id/avatarImg"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="Profile picture"
+        android:src="@drawable/ic_user"
+        android:scaleType="fitCenter"
+        android:layout_margin="20dp"
+        />
 
 </FrameLayout>
