--- a/app/src/main/res/layout/fragment_decks.xml
+++ b/app/src/main/res/layout/fragment_decks.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".fragments.DecksFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Decks fragment" />
+    <Button
+        android:id="@+id/addCardBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Добавить карточку"
+        />
 
 </FrameLayout>
