--- a/app/src/main/res/layout/item_deck.xml
+++ b/app/src/main/res/layout/item_deck.xml
@@ -5,20 +5,27 @@
     android:layout_height="wrap_content">
     <TextView
         android:id="@+id/idView"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:padding="10dp"
         android:text="Deck Id"
         />
     <TextView
         android:id="@+id/titleView"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:layout_width="0dp"
+        android:padding="10dp"
         android:text="Deck Title"
         />
     <TextView
         android:id="@+id/uidView"
-        android:layout_width="wrap_content"
+        android:gravity="end"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:padding="10dp"
         android:text="User Id"
         />
 </LinearLayout>
